--- a/styles/index.css
+++ b/styles/index.css
@@ -1,2 +1,6 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/inter.css);
+@import url(../blocks/page/page.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__top/header__top.css);
+@import url(../blocks/header/__heading/header__heading.css);
