--- a/styles/index.css
+++ b/styles/index.css
@@ -4,3 +4,6 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__top/header__top.css);
 @import url(../blocks/header/__heading/header__heading.css);
+@import url(../blocks/main/main.css);
+@import url(../blocks/cite-section/cite-section.css);
+@import url(../blocks/cite-section/__cite/cite-section__cite.css);
