--- a/blocks/cite-section/cite-section.css
+++ b/blocks/cite-section/cite-section.css
@@ -6,4 +6,6 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    position: relative;
+    padding-top: 10px;
 }
