feat/create footer

--- a/blocks/cite-section/cite-section.css
+++ b/blocks/cite-section/cite-section.css
@@ -1,11 +1,27 @@
 .cite-section {
     border-top: 5px solid #6B0A0B;
-    max-width: 768px;
     margin: 0 auto;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     position: relative;
     padding-top: 10px;
+}
+
+@media screen and (min-width: 320px) {
+    .cite-section {
+        width: 300px;
+    }
+}
+
+@media screen and (min-width: 425px) {
+    .cite-section {
+        width: 405px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .cite-section {
+        width: 748px;
+    }
 }
