--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -1,4 +1,7 @@
 .main {
     flex-grow: 1;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
